opentelemetry/server/helm/collector/examples/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otlp-http-route
  namespace: observability
spec:
  parentRefs:
    - name: observability-gateway # 绑定到您的 Gateway 名称
  hostnames:
    - "otlp.sumery.com" # <-- 替换成您的应用上报数据所使用的域名
  rules:
    # OTLP 规范要求数据上报到 /v1/traces, /v1/metrics, 或 /v1/logs 路径下
    # 使用 PathPrefix 匹配所有 OTLP v1 路径
    - matches:
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - name: otel-collector # OpenTelemetry Collector Service 的名称
          port: 4318             # 路由到 OTLP/HTTP 端口
